src/main/java/com/example/bankapplication/controllers/errors/ApiConnectioException.java
package com.example.bankapplication.controllers.errors;

public class ApiConnectioException extends Exception{
}
